# prod-code-lesson

./: .gitignore  Dockerfile  README.md  commands.sh  pyproject.toml  requirements.txt
config/: variables.py
notebooks/: iris.ipynb
src/: evaluate.py  inference.py  pipeline.py  preprocessing.py  train.py
tests/: test_preprocessing.py
