[project]
name = "prod-code-lesson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.4"
dependencies = [
    "black==25.9.0",
    "flask==3.1.0",
    "ipykernel==7.0.1",
    "isort==7.0.0",
    "loguru==0.7.3",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pre-commit==4.3.0",
    "pyarrow==21.0.0",
    "pylint==4.0.1",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.0",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
]
